apps/music-c6h12o6-kr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-c6h12o6-kr
  namespace: haenu
  labels:
    app: music-c6h12o6-kr
spec:
  selector:
    matchLabels:
      app: music-c6h12o6-kr
  template:
    metadata:
      labels:
        app: music-c6h12o6-kr
    spec:
      containers:
      - name: music-c6h12o6-kr
        image: hyeonwoo5342/music.c6h12o6.kr:5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '20Mi'
            cpu: '10m'
          requests:
            memory: '20Mi'
            cpu: '10m'
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
