apps/music-c6h12o6-kr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-c6h12o6-kr-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: music.c6h12o6.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: music-c6h12o6-kr
            port:
              number: 80
